k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: techcrush-html-service
  labels:
    app: techcrush-html

spec:
  type: NodePort # Expose service on the node's IP

  selector:
    app: techcrush-html

  ports:
    - protocol: TCP
      port: 80  # Port the Service listens on (inside the cluster)
      targetPort: 80  # Port on the Pod/container
      nodePort: 30080 # Must be between 30000-32767
